disableWarning improvement